third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/freeze_field_invalid.exp

Diagnostics:
error: cannot copy mutable reference in local `s` which is still borrowed
   ┌─ tests/reference-safety/v1-tests/freeze_field_invalid.move:18:17
   │
17 │         let f = &s.f;
   │                 ---- previous field borrow
18 │         let g = &mut s.f; // error in v2
   │                 ^^^^^^^^ copied here

error: cannot pass mutable reference in local `s`, which is still borrowed, as function argument
   ┌─ tests/reference-safety/v1-tests/freeze_field_invalid.move:19:9
   │
17 │         let f = &s.f;
   │                 ---- previous field borrow
18 │         let g = &mut s.f; // error in v2
   │                 -------- previous mutable field borrow
19 │         freeze(s);
   │         ^^^^^^^^^ passed here

error: conflicting borrow operations
   ┌─ tests/reference-safety/v1-tests/freeze_field_invalid.move:20:9
   │
17 │         let f = &s.f;
   │                 ---- field borrow attempted here
18 │         let g = &mut s.f; // error in v2
   │                 -------- other mutable field borrow
19 │         freeze(s);
20 │         *f;
   │         ^^ reference used here

error: cannot pass mutable reference in local `s`, which is still borrowed, as function argument
   ┌─ tests/reference-safety/v1-tests/freeze_field_invalid.move:12:9
   │
11 │         let f = &mut s.f;
   │                 -------- previous mutable field borrow
12 │         freeze(s);
   │         ^^^^^^^^^ passed here
